src/test/deca/syntax/invalid/className-protected.synt
className-protected.deca:1:
